--- a/web_pro02_b/src/main/webapp/index.html
+++ b/web_pro02_b/src/main/webapp/index.html
@@ -289,5 +289,33 @@
 			<td>3행 3열</td>
 		</tr>
 	</table>
+	<div style="height: 150px; background-color: lightred;">
+		block 영역(div)
+	</div>
+	<div style="height: 150px; background-color: lightblue;">
+		block 영역(div)
+	</div>
+	<div style="height: 150px; background-color: lightgreen;">
+		block 영역(div)
+		<span style="background-color: lightcoral;">inline 영역1</span>
+		<span style="background-color: lightblue;">inline 영역1</span>
+		<span style="background-color: lightgreen;">inline 영역1</span>
+		<span style="background-color: lightyellow;">inline 영역1</span>
+		<span style="background-color: lightpink;">inline 영역1</span>
+		<span style="background-color: lightsteelblue;">inline 영역1</span>
+	</div>
+	<hr>
+	<header>시맨틱 태그 Header 머리글에 해당하는 영역을 의미하는 태그로 사용(예: 최상단 메뉴, 검색기능, 로고이미지, ... )</header>
+	<section>시맨틱 태그로 본문 내용(컨텐츠)이 들어가는 영역으로 내용들을 주제별로 묶기 위해 사용</section>
+	<article>시맨틱 태그로 실제 본문 내용이 들어가는 영역으로 재배포 가능한 내용임을 의미한다.</article>
+	<aside>시맨틱 태그로 사이드 광고 및 메뉴가 포함된 영역임을 알리는 태그</aside>	
+	<footer>시맨틱 태그로 회사 소개, 저장권, 연락처 정보등의 정보가 있는 영역임을 알린다. 보통 페이지 하단에 배치하여 사용한다.</footer>
+	<nav>시맨틱 태그로 메뉴 네비게이션이 있는 영역임을 알린다.</nav>
+	위에 작성한 시맨틱 영역 태그는 CSS와 같이 사용하여 Layout 구성을 만들게 된다.
+	<hr>
+	<div>
+		<!-- iframe : 페이지 안에 페이지가 들어갈 수 있도록 한다. 웬만해서 많이 사용하지 말기 -->
+		<iframe width="100%" height="250px" src="https://www.iei.or.kr/login/login.kh"><</iframe>		
+	</div>
 </body>
 </html>
