--- a/web_pro02_b/src/main/webapp/index.html
+++ b/web_pro02_b/src/main/webapp/index.html
@@ -305,12 +305,12 @@
 		<span style="background-color: lightsteelblue;">inline 영역1</span>
 	</div>
 	<hr>
-	<header>시맨틱 태그 Header 머리글에 해당하는 영역을 의미하는 태그로 사용(예: 최상단 메뉴, 검색기능, 로고이미지, ... )</header>
-	<section>시맨틱 태그로 본문 내용(컨텐츠)이 들어가는 영역으로 내용들을 주제별로 묶기 위해 사용</section>
-	<article>시맨틱 태그로 실제 본문 내용이 들어가는 영역으로 재배포 가능한 내용임을 의미한다.</article>
-	<aside>시맨틱 태그로 사이드 광고 및 메뉴가 포함된 영역임을 알리는 태그</aside>	
-	<footer>시맨틱 태그로 회사 소개, 저장권, 연락처 정보등의 정보가 있는 영역임을 알린다. 보통 페이지 하단에 배치하여 사용한다.</footer>
-	<nav>시맨틱 태그로 메뉴 네비게이션이 있는 영역임을 알린다.</nav>
+	<header>header : 시맨틱 태그 Header 머리글에 해당하는 영역을 의미하는 태그로 사용(예: 최상단 메뉴, 검색기능, 로고이미지, ... )</header>
+	<section>section : 시맨틱 태그로 본문 내용(컨텐츠)이 들어가는 영역으로 내용들을 주제별로 묶기 위해 사용</section>
+	<article>article : 시맨틱 태그로 실제 본문 내용이 들어가는 영역으로 재배포 가능한 내용임을 의미한다.</article>
+	<aside>aside : 시맨틱 태그로 사이드 광고 및 메뉴가 포함된 영역임을 알리는 태그</aside>	
+	<footer>footer : 시맨틱 태그로 회사 소개, 저장권, 연락처 정보등의 정보가 있는 영역임을 알린다. 보통 페이지 하단에 배치하여 사용한다.</footer>
+	<nav>nav : 시맨틱 태그로 메뉴 네비게이션이 있는 영역임을 알린다.</nav>
 	위에 작성한 시맨틱 영역 태그는 CSS와 같이 사용하여 Layout 구성을 만들게 된다.
 	<hr>
 	<div>
