--- a/web_pro02_b/src/main/webapp/index.html
+++ b/web_pro02_b/src/main/webapp/index.html
@@ -317,5 +317,17 @@
 		<!-- iframe : 페이지 안에 페이지가 들어갈 수 있도록 한다. 웬만해서 많이 사용하지 말기 -->
 		<iframe width="100%" height="250px" src="https://www.iei.or.kr/login/login.kh"><</iframe>		
 	</div>
+	<div>
+		<iframe>width="560" height="315" src="https://www.youtube.com/embed/7DkrkPea_zM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen</iframe>
+	</div>
+	<hr>
+	<img alt="깃허브" src="chrome://favicon2/?size=24&scale_factor=1x&show_fallback_monogram=&page_url=https%3A%2F%2Fgithub.com%2F">	
+	<!-- 아직 브라우저는 해당 이미지를 가지고 있지 않음 경로 소스만 알고 있을 뿐, 따라서 브라우저가 서버에 또 다시 이미지 요청을 하여 해당 이미지를 얻어내는 것이다. 이때는 구글(서버)에 직접 요청을 하는 것이다. 내 서버가 아님 -->
+	
+	<img usemap="#imgmap" alt="깃허브" widthd="240px" src="./github.png">	<!--  다운로드 받은 이미지 가져오기 이 방법은 내 파일을 불러오는 거기 때문에 타 서버에 요청을 하지 않아도 된다. -->
+	<map name="imgmap">		<!-- 이미지에 영역을 설정하는 것. 이때 map name은 링크를 걸어둘 이미지의 usemap 이름과 같아야 한다. -->
+		<area shape="rect" coords="0,0,120,60" href="https://google.com">	<!-- x,y좌표이기 때문에 두개씩 묶어서 봐야한다. (0,0), (120,60) 이 영역에 해당하는 크기만큼 링크를 걸어둔 것이다.-->
+		<area shape="rect" coords="120,0,240,60" href="https://naver.com">	
+	</map>
 </body>
 </html>
