--- a/web_pro03_b/src/main/webapp/practice01.html
+++ b/web_pro03_b/src/main/webapp/practice01.html
@@ -5,8 +5,8 @@
 <title>사유서</title>
 </head>
 <body>
-	<h1>사유서</h1>
 	<table style="height: 150px; width: 500px;" border="1">
+		<caption><h1>사유서</h1></caption>
 		<colgroup>
 			<col style="background-color:#DDDDDD; width: 130px;">
 			<col style="width: 70px;">
@@ -28,7 +28,7 @@
 		<tr>
 			<th>발생일</th>
 			<td></td>
-			<td>신청일</td>
+			<td style="background-color:#DDDDDD;">신청일</td>
 			<td></td>
 		</tr>
 		<tr>
@@ -39,6 +39,41 @@
 			<th>출석입력 신청 사유</th>
 			<th style="height: 130px" colspan="3"></th>
 		</tr>
+	</table>
+	
+	
+	<table border="1" style="border-collaps: collapse;">
+		<caption><h1>사유서</h1></caption>
+		<tr>
+			<th style="background-color: #DFDFDF">훈련과정명</th>
+			<th colspan="3"></th>
+		</tr>
+		<tr>
+			<th style="background-color: #DFDFDF">훈련기간</th>
+			<td colspan="3"></td>
+		</tr>
+		<tr>
+			<th style="background-color: #DFDFDF">훈련생 성명</th>
+			<td colspan="3"></td>
+		</tr>
+		<tr>
+			<th style="background-color: #DFDFDF">발생일</th>
+			<td width="160px"></td>
+			<td style="background-color:#DFDFDF">신청일</td>
+			<td width="160px"></td>
+		</tr>
+		<tr>
+			<th style="background-color:#DFDFDF">출석입력 요청 내용</th>
+			<th colspan="3"></th>
+		</tr>
+		<tr>
+			<th style="background-color:#DFDFDF">출석입력 신청 사유</th>
+			<th style="height: 130px" colspan="3"></th>
+		</tr>
+		
+		
+		
+		
 	</table>
 </body>
 </html>
