--- a/web_pro09_b/src/main/webapp/sample02/index.html
+++ b/web_pro09_b/src/main/webapp/sample02/index.html
@@ -35,5 +35,10 @@
 	<button type="button" onclick="f9(10);">f9(10)</button>
 	<button type="button" onclick="f9(10,20);">f9(10,20)</button>
 	<button type="button" onclick="f9(10,20,30);">f9(10,20,30)</button>
+	<h2>화살표 함수</h2>
+	<button type="button" onclick="console.log(f10());">f10()</button>
+	<button type="button" onclick="console.log(f10(10));">f10(10)</button>
+	<button type="button" onclick="console.log(f10(10,20,30));">f10(10,20,30)</button>
+	
 </body>
 </html>
