--- a/jsp_pro/src/main/webapp/board/add2.html
+++ b/jsp_pro/src/main/webapp/board/add2.html
@@ -9,7 +9,7 @@
 <body>
 	<header></header>
 	<section class="container">
-		<div class="mt-3">
+		<div mt-3>
 			<form action="" method="post">
 				<div class="mb-3">
 					<input class="form-control" id="id_title" name="title" placeholder="제목을 입력하세요.">
@@ -21,6 +21,23 @@
 					<button class="btn btn-success" type="submit">저장</button>
 				</div>
 			</form>
+		</div>
+		<!--  modal -->
+		<div class="modal" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h5 class="modal-title" id="errorModalLabel">오류</h5>
+		        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		      </div>
+		      <div class="modal-body">
+		       	제목은 공란이 올 수 없습니다. 반드시 제목을 입력하세요.
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">확인</button>
+		      </div>
+		    </div>
+		  </div>
 		</div>
 	</section>
 	<footer></footer>
